Fix LoRa communication and add debug logging
- Restore working CubeCell transmitter code based on original volkszahler sketch
- Add debug logging and heartbeat to LoRa32 receiver component
- Fix potential infinite loop in wait_busy() function with 3s timeout
- Add watchdog timer and status indicators to ESPHome config
- Add verbose logging for better debugging of hanging issues
- Configure status LED and restart button for diagnostics
- CubeCell now successfully transmits every 5 seconds
- Battery voltage still incorrect (1.21V) due to v2 hardware issue

Known issues:
- Battery voltage reading incorrect on CubeCell v2 (hardware defect)
- LoRa32 receiver needs proper SX1262 initialization (currently in test mode)

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:cubecell]
-platform = asrmicro650x
+platform = https://github.com/HelTecAutomation/platform-asrmicro650x.git
 board = cubecell_board
 framework = arduino
 monitor_speed = 115200
@@ -25,7 +25,7 @@ build_flags =
 
 ; Library dependencies
 lib_deps = 
-    SoftwareSerial
+    ; SoftwareSerial is built-in for CubeCell
 
 ; For production mode (default)
 [env:cubecell_production]
@@ -40,3 +40,56 @@ extends = env:cubecell
 build_flags = 
     ${env:cubecell.build_flags}
     -D DEBUG_MODE=true
+
+; For LoRa P2P mode
+[env:cubecell_lora]
+extends = env:cubecell
+build_flags = 
+    ${env:cubecell.build_flags}
+    -D DEBUG_MODE=true
+    -D LORA_P2P_MODE=true
+build_src_filter = 
+    +<*>
+    -<main.cpp>
+    +<main_lora.cpp>
+
+; For LoRa Test Mode (incremental test data)
+[env:cubecell_testmode]
+extends = env:cubecell
+build_flags = 
+    ${env:cubecell.build_flags}
+    -D TEST_MODE=true
+    -D LORA_P2P_MODE=true
+    -D LORA_TX_POWER_OVERRIDE=14  ; Override TX power (14 dBm for testing, comment out for default)
+build_src_filter = 
+    +<*>
+    -<main.cpp>
+    -<main_lora.cpp>
+    -<main_simple_test.cpp>
+    +<main_lora_testmode.cpp>
+
+; Original working version based on volkszahler code
+[env:cubecell_original]
+extends = env:cubecell
+build_flags = 
+    ${env:cubecell.build_flags}
+    -D TEST_MODE=true
+build_src_filter = 
+    +<*>
+    -<main.cpp>
+    -<main_lora.cpp>
+    -<main_simple_test.cpp>
+    -<main_lora_testmode.cpp>
+    +<main_lora_original.cpp>
+
+; Simple blink test
+[env:cubecell_simple]
+extends = env:cubecell
+build_flags = 
+    ${env:cubecell.build_flags}
+build_src_filter = 
+    +<*>
+    -<main.cpp>
+    -<main_lora.cpp>
+    -<main_lora_testmode.cpp>
+    +<main_simple_test.cpp>
